# ai_project_management

./: .gitignore  .loop.pid  AI_GUIDE.md  CONTRACTS.md  Cargo.toml  PLAN.md  README.md  ROADMAP.md  V2_ROADMAP.md  autonomous_recruiter.py  continuous_loop.py  crontab.example  diag.glyph  geo-forge.toml.example  loop.sh  main.py  migrate_from_paperclip.py  openclaw_oversight.py  oversight_monitor.py  package-lock.json  package.json  project.yaml  pyproject.toml  setup_oversight_cron.sh  test_aipm.py  test_scanner.py
.ssh/: id_rsa  id_rsa.pub
aipm/: __init__.py  ascii_bridge.py  auto_pr.py  cli_ingest.py  command_watcher.py  config.py  cross_project.py  driver.py  followup.py  github_sync.py  install_templates.py  integration.py  issue_queue.py  learnings.py  loop.py  loop_control.py  metrics.py  model_router.py  monte_carlo.py  openspec_adapter.py  outcome.py  priority.py  prompt_log.py  prompt_strategies.py  queue.py  rag_context.py  rca.py  repo_scaffold.py  roadmap_processor.py  roadmap_sync.py  scanner.py  session_historian.py  spec_discoverer.py  spec_queue.py  sqlite_resilient.py  state.py  trust.py  watchdog.py  webhook.py
aipm/api/: __init__.py  health.py  server.py
aipm/ascii/: __init__.py  dashboard.py  sync_server.py
aipm/cli/: __init__.py
aipm/core/: __init__.py  analyzer.py  automated_loop.py  autospec_manager.py  ctrm_prompt_manager.py  dashboard_engine.js  dashboard_renderer.js  engine.py  generator.py  loop.py  prompt_prioritizer.py  queue.py  response_analyzer.py  simple_bridge.py  vcc_texture_bridge.js
aipm/core/data_sources/: aipm_sqlite.js  base.js
aipm/ctrm/: __init__.py  database.py  manager.py
aipm/layouts/: aipm-dashboard.json
aipm/project/: manager.py  models.py  project_manager.py
aipm/publishers/: http_server.js  loop_control.js  png_export.js  ssh_server.js
aipm/spec/: __init__.py
aipm/templates/: AGENTS.md  bug-report.yml  config.yml  feature-spec.yml
ascii_world/: control_center.ascii  control_center.html
backup/: server.py
conductor/: spec-generation-guardrails.md
conductor/tracks/aipm-frontend/: plan.md
conductor/tracks/cms-integration/: plan.md
conductor/tracks/dashboard-productization/: plan.md
data/: queue.db  truths.db-shm  truths.db-wal
docs/: ARCHITECTURE_ANALYSIS.md  HOW_IT_WORKS.md  NEURO_SPATIAL_FUSION.md  ROADMAP.md  TRI_TIER_ARCHITECTURE.md
examples/: api_server.py  basic_usage.py
logs/: 2026-03-31.md  2026-04-01.md  oversight_report.json
migrations/: 001_init.sql  002_invocations.sql  003_routine_runs.sql  004_retry_backoff.sql  005_alert_rules.sql  006_spec_documents.sql  007_issue_outcomes.sql  008_strategy_dispatch.sql  009_learnings.sql  010_webhooks_events.sql  011_agent_injections.sql
openspec/changes/add-test-suite/: proposal.md  status.yaml  tasks.md
openspec/changes/consolidate-db-layer/: proposal.md  status.yaml  tasks.md
openspec/changes/refactor-loop-monolith/: proposal.md  status.yaml  tasks.md
openspec/changes/replace-gh-subprocess/: proposal.md  status.yaml  tasks.md
openspec/specs/: architecture.md
repos/: ascii-world-core  geometry-os-gpu  glass-box-monitor  glyphlang  glyphlang-source  openclaw-glass  openmind  pixel-linux  pixel-poc  rhythmbox-tools
repos/CLI-Anything/CLI-Anything-main/: .gitignore  README.md  registry.json
repos/aipm-test-web/: index.js  package-lock.json  package.json
repos/aipm-test-web/test/: app-bootstrap.test.js  db-queries.test.js  db-truths.test.js  middleware.test.js
repos/autoresearch/: prepare.py  train.py
repos/mcp2cli/mcp2cli-main/: README.md  pyproject.toml
repos/openspec/: project.yaml
repos/openspec/docs/: cli.md  concepts.md  migration-guide.md  supported-tools.md
repos/openspec_aipm/: README.md  aipm-test.yaml  aipm.yaml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
repos/openspec_aipm/docs/: cli.md  concepts.md  migration-guide.md  workflows.md
repos/openspec_aipm/src/: cli.ts
repos/session_loops/: README.md  loop_orchestrator.py
scripts/: backup.sh  geo-forge.service  migrate_from_paperclip.py
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  state_machine.rs  validation.rs
src/aipm/: __init__.py  cli.py  cli_ingest.py  config.py  model_cli.py
src/aipm/ascii_world/: __init__.py  dashboard.py
src/aipm/core/: automated_loop.py  codebase_analyzer.py  ctrm_prompt_manager.py  engine.py  extended_providers.py  prioritizer.py  project_manager.py  queue_bridge.py  simple_bridge.py  unified_prompt_engine.py
src/db/: models.rs
src/middleware/: rate_limit.rs
src/routes/: activity.rs  agents.rs  alerts.rs  companies.rs  dispatch.rs  goals.rs  health.rs  issues.rs  labels.rs  learnings.rs  metrics.rs  mod.rs  projects.rs  routines.rs  specs.rs  stats.rs  strategies.rs  webhooks.rs
src/services/: event_bus.rs  executor.rs  health_monitor.rs  mod.rs  scheduler.rs  timestamps.rs
sync/: pixel-formula-engine.js  theme-editor.js  theme-manager.js
tests/: __init__.py  integration_tests.rs  test_engine.py  test_queue.py  theme-manager.test.js
themes/: cyberpunk.json  dark-pro.json  retro-green.json
(+156 files in other folders)
