[package]
name = "geo-forge"
version = "0.1.0"
edition = "2021"
description = "Geometry OS Agent Orchestrator -- replaces Paperclip for GEO agents"

[lib]
name = "geo_forge"
path = "src/lib.rs"

[[bin]]
name = "geo-forge"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
cron = "0.15"
humantime = "2"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
