[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipm"
version = "0.1.0"
description = "AI Project Manager - The foundational layer for AI-driven project development"
authors = [{name = "OpenClaw Team"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ai", "project-management", "prompts", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.9.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "sqlite3-api>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
aipm = "aipm.cli:main"

[project.urls]
Homepage = "https://github.com/tdw419/ai_project_management"
Documentation = "https://github.com/tdw419/ai_project_management#readme"
Repository = "https://github.com/tdw419/ai_project_management"

[tool.setuptools.packages.find]
where = ["."]
include = ["aipm*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
